2009-12-14  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Adele Peterson.

        AX: there's an infinite loop going on for some webpages - facebook.com
        https://bugs.webkit.org/show_bug.cgi?id=32501

        The problem is that parentObjectUnignored() cannot be called
        while in accessibilityIsIgnored, because it leads to
        recursiveness. Specifically, there were checks to determine
        if an object was within a ARIA tree. That check should
        1) be moved to all platforms, and 2) not call parentObjectUnignored().

        Test: accessibility/hang-in-isignored.html

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::isAllowedChildOfTree):
        (WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
        * accessibility/AccessibilityRenderObject.h:
        * accessibility/mac/AccessibilityObjectMac.mm:
        (WebCore::AccessibilityObject::accessibilityPlatformIncludesObject):

2009-12-14  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6293979> Adopt shared control drawing for <video> controls on Leopard and Windows

        Use MediaControllerThemeQuickTime on Leopard.

        * rendering/RenderThemeMac.mm:
        (WebCore::mediaControllerTheme):

2009-12-14  Adam Roben  <aroben@apple.com>

        Move QuartzCore-related build settings into a vsprops file

        Fixes <http://webkit.org/b/32518>

        Reviewed by Dan Bernstein.

        * WebCore.vcproj/WebCore.vcproj: Let VS reformat the files list, added
        WebCoreQuartzCore.vsprops to the non-Cairo configurations, moved all
        other QuartzCore-related build settings from here...
        * WebCore.vcproj/WebCoreQuartzCore.vsprops: ...to here.

2009-12-14  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Antti Koivisto.

        handling scripts can block UI
        https://bugs.webkit.org/show_bug.cgi?id=27612
