@@ -1,3 +1,13 @@
+2009-12-14  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Unreviewed, build fix.
+
+        [Chromium] Guard all of JSC's wrapper cache-related members on Document.
+
+        * dom/Document.cpp:
+        (WebCore::Document::createWrapperCache): Widened the guards to the whole method.
+        * dom/Document.h: Added JSC guards to wrapper cache-related members.
+
 2009-12-14  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Adele Peterson.
